 /* $Id: ChangeLog,v 1.910 2000-04-25 22:54:21 davidr Exp $ */

 2000-04-10: David Raison <djr@lemur.co.uk>
        - INCLUDE/WIN: Added RPC_E_* codes to winerror.h

 2000-04-25: Achim Hasenmueller <achimha@innotek.de>
	- TOOLS/BIN: put back old wrc.exe from Oct. 99 because the
	             new one has problems with include files...

 2000-04-25: Patrick Haller <phaller@gmx.net>
        - SHLWAPI: - stubbed all the UrlXXX functions (required for IE4/5 ;-)

 2000-04-23: Sander van Leeuwen <sandervl@xs4all.nl>
	- GDI32:   Dib section blit fix (missing pixels)
	- WSOCK32: Don't send FD_CLOSE message when select returns
                   and there's no data available (recv in another thread
                   might have taken that data before the ioctl call in
                   the WSAAsyncSelect thread)
                   -> fixes lost connections in RealPlayer 7

 2000-04-19: Patrick Haller <phaller@gmx.net>
        - INCLUDE/PDWIN32.TOOLS: fix build rule for (old) .asm sources

 2000-04-19: knut st. osmundsen <knut.stange.osmundsen@pmsc.no>
        - KERNEL32: Added fix for bug in FP13 DosQuerySysInfo.
                Win32k/Pe2Lx loaded files didn't work.
                Corrected TLS handling for Borland.

 2000-04-19: Sander van Leeuwen <sandervl@xs4all.nl>
	- TOOLS\WRC: Resync with latest Wine wrc + added code to produce
                     masm compatible assembly (for some reason removed from
                     wrc some time ago)
                     -> fixes file open dialog (nothing painted)
	- COMCTL32:  Check for NULL pointers before freeing memory
                     (toolbar; removes some warnings from the logfiles)

 2000-04-18: Sander van Leeuwen <sandervl@xs4all.nl>
	- USER32:   Added LR_LOADFROMFILE support for icon & cursor loading
	- GDI32:    Dib section fixes (use height/width of window when
                    dc belongs to a window; use correct stretchblit mode)
	- TOOLS\REGEDIT: Added regedit command line tool (ported this from